crates/cicada-lang/tests/snapshots/checker__dot_out_selects_the_single_output.snap
---
source: crates/cicada-lang/tests/checker.rs
expression: "check(\"# cicada 1\\ns = slider(value=1.0)\\nc = circle(radius=s.value)\\n\")"
---
[
  {
    "fix": {
      "label": "reference `s` directly",
      "replacement": "s"
    },
    "kind": "unknown_port",
    "message": "`s` binds a single-output node — its only port is `out`; reference `s` directly",
    "node": "c",
    "span": {
      "col_end": 25,
      "col_start": 18,
      "line": 3
    }
  }
]
